<resources>
    <string name="app_name">News</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="user_not_found">User not found</string>
    <string name="ma_chosen_category">Chosen category:</string>
    <string name="user_added">User added</string>
    <string name="user_already_exist">User already exist</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="to_login">Log In</string>
    <string name="registration">Registration</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="administrator">Administrator</string>
    <string name="save_changes">Save changes</string>
    <string name="favorites">Favorites</string>
    <string name="data_not_correct">Data is not correct</string>
    <string name="favorite_articles">Favorite articles</string>
    <string name="check_article">View the article</string>
    <string name="choose_category">Choose category</string>
    <string name="sort_type">Sorting mode</string>
    <string name="article_added_to_favorites">Article added to favorites</string>
    <string name="article_removed_from_favorites">Article removed from favorites</string>
    <string name="article_language">Article Language</string>

    <string-array name="categories">
        <item>Politic</item>
        <item>Technology</item>
        <item>Cinema</item>
        <item>Music</item>
        <item>Sport</item>
        <item>Games</item>
        <item>Celebrity</item>
        <item>Books</item>
        <item>Anime</item>
    </string-array>
    <string-array name="categoriesRU">
        <item>Политика</item>
        <item>Технологии</item>
        <item>Кинематограф</item>
        <item>Музыка</item>
        <item>Спорт</item>
        <item>Компьютерные игры</item>
        <item>Знаменитости</item>
        <item>Книги</item>
        <item>Аниме</item>
    </string-array>

    <string-array name="sortBy">
        <item>publishedAt</item>
        <item>relevancy</item>
        <item>popularity</item>
    </string-array>
    <string-array name="sortByRU">
        <item>Дата публикации</item>
        <item>Релевантность</item>
        <item>Популярность</item>
    </string-array>
    <string-array name="sortByUS">
        <item>Published at</item>
        <item>Relevancy</item>
        <item>Popularity</item>
    </string-array>

    <string-array name="languages">
        <item>en</item>
        <item>ar</item>
        <item>de</item>
        <item>es</item>
        <item>fr</item>
        <item>he</item>
        <item>it</item>
        <item>nl</item>
        <item>no</item>
        <item>pt</item>
        <item>ru</item>
        <item>sv</item>
        <item>zh</item>
    </string-array>
    <string-array name="languagesRU">
        <item>Английский</item>
        <item>Арабский</item>
        <item>Немецкий</item>
        <item>Испанский</item>
        <item>Французский</item>
        <item>Иврит</item>
        <item>Итальянский</item>
        <item>Нидерландский</item>
        <item>Норвежский</item>
        <item>Португальский</item>
        <item>Русский</item>
        <item>Шведский</item>
        <item>Китайский</item>
    </string-array>
    <string-array name="languagesUS">
        <item>English</item>
        <item>Arabic</item>
        <item>German</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Hebrew</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Portugal</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Chinese</item>
    </string-array>


</resources>